err/ext-cloud.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dogpile'...
Listing './lib/python3.5/site-packages/dogpile/cache'...
Listing './lib/python3.5/site-packages/dogpile/cache/backends'...
Listing './lib/python3.5/site-packages/dogpile/cache/plugins'...
Listing './lib/python3.5/site-packages/dogpile/util'...
Listing './lib/python3.5/site-packages/dogpile.cache-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/ext_cloud'...
Listing './lib/python3.5/site-packages/ext_cloud/AWS'...
Listing './lib/python3.5/site-packages/ext_cloud/AWS/AWSCompute'...
Listing './lib/python3.5/site-packages/ext_cloud/AWS/AWSImages'...
Listing './lib/python3.5/site-packages/ext_cloud/AWS/AWSNetworks'...
Listing './lib/python3.5/site-packages/ext_cloud/AWS/AWSObjectStore'...
Listing './lib/python3.5/site-packages/ext_cloud/AWS/AWSRegions'...
Listing './lib/python3.5/site-packages/ext_cloud/AWS/AWSTemplates'...
Listing './lib/python3.5/site-packages/ext_cloud/AWS/AWSVolumes'...
Listing './lib/python3.5/site-packages/ext_cloud/Azure'...
Listing './lib/python3.5/site-packages/ext_cloud/Azure/AzureCompute'...
Listing './lib/python3.5/site-packages/ext_cloud/Azure/AzureImages'...
Listing './lib/python3.5/site-packages/ext_cloud/Azure/AzureRegions'...
Listing './lib/python3.5/site-packages/ext_cloud/Azure/AzureVolumes'...
Listing './lib/python3.5/site-packages/ext_cloud/BaseCloud'...
Listing './lib/python3.5/site-packages/ext_cloud/BaseCloud/BaseCompute'...
Listing './lib/python3.5/site-packages/ext_cloud/BaseCloud/BaseIdentity'...
Listing './lib/python3.5/site-packages/ext_cloud/BaseCloud/BaseImages'...
Listing './lib/python3.5/site-packages/ext_cloud/BaseCloud/BaseNetworks'...
Listing './lib/python3.5/site-packages/ext_cloud/BaseCloud/BaseObjectStore'...
Listing './lib/python3.5/site-packages/ext_cloud/BaseCloud/BaseRegions'...
Listing './lib/python3.5/site-packages/ext_cloud/BaseCloud/BaseResources'...
Listing './lib/python3.5/site-packages/ext_cloud/BaseCloud/BaseServices'...
Listing './lib/python3.5/site-packages/ext_cloud/BaseCloud/BaseTemplates'...
Listing './lib/python3.5/site-packages/ext_cloud/BaseCloud/BaseVolumes'...
Listing './lib/python3.5/site-packages/ext_cloud/OpenStack'...
Listing './lib/python3.5/site-packages/ext_cloud/OpenStack/OpenStackCompute'...
Listing './lib/python3.5/site-packages/ext_cloud/OpenStack/OpenStackIdentity'...
Listing './lib/python3.5/site-packages/ext_cloud/OpenStack/OpenStackImages'...
Listing './lib/python3.5/site-packages/ext_cloud/OpenStack/OpenStackNetworks'...
Listing './lib/python3.5/site-packages/ext_cloud/OpenStack/OpenStackObjectStore'...
Listing './lib/python3.5/site-packages/ext_cloud/OpenStack/OpenStackRegions'...
Listing './lib/python3.5/site-packages/ext_cloud/OpenStack/OpenStackResources'...
Listing './lib/python3.5/site-packages/ext_cloud/OpenStack/OpenStackServices'...
Listing './lib/python3.5/site-packages/ext_cloud/OpenStack/OpenStackTemplates'...
Listing './lib/python3.5/site-packages/ext_cloud/OpenStack/OpenStackVolumes'...
Listing './lib/python3.5/site-packages/ext_cloud/OpenStack/utils'...
Listing './lib/python3.5/site-packages/ext_cloud/TestCases'...
Listing './lib/python3.5/site-packages/ext_cloud/TestCases/TestCompute'...
Compiling './lib/python3.5/site-packages/ext_cloud/TestCases/benchmark.py'...
***   File "./lib/python3.5/site-packages/ext_cloud/TestCases/benchmark.py", line 84
    print self._stats
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ext_cloud/test.py'...
***   File "./lib/python3.5/site-packages/ext_cloud/test.py", line 9
    print instance
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ext_cloud/test_metrics.py'...
***   File "./lib/python3.5/site-packages/ext_cloud/test_metrics.py", line 14
    print metric.name, '\t', metric.value, '\t', metric.timestamp
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ext_cloud/utils'...
Listing './lib/python3.5/site-packages/ext_cloud-2017.11.13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tlz'...
Listing './lib/python3.5/site-packages/toolz'...
Listing './lib/python3.5/site-packages/toolz/curried'...
Listing './lib/python3.5/site-packages/toolz/sandbox'...
Listing './lib/python3.5/site-packages/toolz/tests'...
Listing './lib/python3.5/site-packages/toolz-0.9.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
